# ChangeLog for sys-apps/pv
# Copyright 2000-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/pv/ChangeLog,v 1.9 2009/02/21 10:34:16 angelos Exp $

  21 Feb 2009; Christoph Mende <angelos@gentoo.org> -pv-1.1.0.ebuild:
  Removed old

  16 Nov 2008; Jeroen Roovers <jer@gentoo.org> pv-1.1.4.ebuild:
  Marked ~hppa thanks to LuckyLuke.

  13 Jun 2008; Stephanie Lockwood-Childs <wormo@gentoo.org> pv-1.1.4.ebuild:
  stable on ppc (bug #225947)

  12 Jun 2008; Raúl Porcel <armin76@gentoo.org> pv-1.1.4.ebuild:
  alpha/sparc/x86 stable wrt #225947

  12 Jun 2008; Brent Baude <ranger@gentoo.org> pv-1.1.4.ebuild:
  stable ppc64, bug 225947

  11 Jun 2008; Christoph Mende <angelos@gentoo.org> pv-1.1.4.ebuild:
  Stable on amd64, bug #225947

*pv-1.1.4 (06 Mar 2008)

  06 Mar 2008; Christoph Mende <angelos@gentoo.org> +pv-1.1.4.ebuild:
  Version bump

  03 Oct 2007; Christoph Mende <angelos@gentoo.org>
  -files/pv-remove-doc-target.patch, -pv-0.9.6.ebuild, -pv-0.9.9.ebuild,
  -pv-1.0.1.ebuild:
  Cleanup

  03 Oct 2007; Raúl Porcel <armin76@gentoo.org> pv-1.1.0.ebuild:
  alpha stable wrt #194417

  03 Oct 2007; Tom Gall <tgall@gentoo.org> pv-1.1.0.ebuild:
  stable on ppc64

  02 Oct 2007; nixnut <nixnut@gentoo.org> pv-1.1.0.ebuild:
  Stable on ppc wrt bug 194417

  02 Oct 2007; Christian Faulhammer <opfer@gentoo.org> pv-1.1.0.ebuild:
  stable x86, bug 194417

  01 Oct 2007; Ferris McCormick <fmccor@gentoo.org> pv-1.1.0.ebuild:
  Sparc stable --- Bug #194417 --- thanks, Tiago.

  30 Sep 2007; Christoph Mende <angelos@gentoo.org> pv-1.1.0.ebuild:
  Stable on amd64

  12 Sep 2007; Christoph Mende <angelos@gentoo.org> pv-1.0.1.ebuild:
  Stable on amd64

*pv-1.1.0 (31 Aug 2007)

  31 Aug 2007; Christoph Mende <angelos@gentoo.org> +pv-1.1.0.ebuild:
  Version bump

  18 Aug 2007; Christoph Mende <angelos@gentoo.org> pv-1.0.1.ebuild:
  Remove unneeded patch and add dodoc

  14 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> pv-0.9.9.ebuild: